--- a/style.css
+++ b/style.css
@@ -143,3 +143,38 @@
   #narzedzia { top: 50px; left: 10px; }
   #exportKML { display: none; }
 }
+.trudnosc-wrapper {
+  margin: 6px 0;
+}
+.trudnosc-range {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background: linear-gradient(to right, green, red);
+  outline: none;
+}
+.trudnosc-range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  border: 1px solid #444;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.trudnosc-range::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  border: 1px solid #444;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.trudnosc-labels {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  margin-top: 2px;
+}
