Add difficulty slider editing

--- a/style.css
+++ b/style.css
@@ -178,3 +178,9 @@
   font-size: 12px;
   margin-top: 2px;
 }
+
+.trudnosc-value {
+  text-align: center;
+  font-size: 12px;
+  margin-top: 2px;
+}
