--- a/style.css
+++ b/style.css
@@ -38,21 +38,22 @@
 
 .emoji-picker-grid {
   position: absolute;
-  bottom: 34px;
+  top: 34px;
   right: 0;
   background: #2b2b2b;
   border: 1px solid #444;
   padding: 4px;
-  flex-wrap: wrap;
   display: none;
-  max-width: 200px;
   z-index: 2000;
+  display: grid;
+  grid-template-columns: repeat(8, 24px);
+  gap: 4px;
+  width: calc(8 * 24px + 7 * 4px);
 }
 
 .emoji-picker-grid img {
   width: 24px;
   height: 24px;
-  margin: 2px;
   cursor: pointer;
 }
 
