--- a/style.css
+++ b/style.css
@@ -59,6 +59,19 @@
   cursor: pointer;
 }
 
+.emoji-add-btn {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #444;
+  color: #fff;
+  border: 1px solid #666;
+  cursor: pointer;
+  padding: 0;
+}
+
 .dropdown-arrow {
   position: absolute;
   right: 4px;
