--- a/style.css
+++ b/style.css
@@ -150,7 +150,13 @@
 #collapseAllLayers {
   margin: 5px 0;
   background: none;
-  border: none;
+  color: inherit;
+  font-size: 12px;
+  cursor: pointer;
+}
+#toggleVisibility {
+  margin: 5px 0;
+  background: none;
   color: inherit;
   font-size: 12px;
   cursor: pointer;
