--- a/style.css
+++ b/style.css
@@ -437,5 +437,9 @@ bottom: 2px;
     #odKogoNew {
     margin: 15px 0 !important;
     }
+
+    #nazwaNew {
+    margin: 15px 0 !important;
+    }
     
 }
