--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@
 
   .emoji-picker-grid {
     position: absolute;
-    top: 34px;
+    top: auto;
+    bottom: 34px;
     left: 0;
   background: #2b2b2b;
   border: 1px solid #444;
